# racecar

./: .gitignore  README.md  exclude-list.txt  install.sh
racecar_control/: CMakeLists.txt  package.xml
racecar_control/cfg/: pd_controller.cfg  pure_pursuit.cfg  speed_controller.cfg
racecar_control/config/: mpc_params.yaml  pure_pursuit_params.yaml  stage_reconfigure.yaml
racecar_control/include/: border_adjustment.h  border_adjustment_ros.h  gradient_path.h  grid_path.h
racecar_control/launch/: mpc_controller.launch  pd_controller.launch  pure_pursuit.launch  racing.launch  racing_mb.launch  speed_controller.launch
racecar_control/scripts/: cmd_vel_translator.py  stage_reconfigure.py
racecar_core/: CMakeLists.txt  package.xml
racecar_core/config/: chassis_command_priorities.yaml  racecar_properties.yaml  steer_mapping.yaml  throttle_mapping.yaml
racecar_core/include/racecar_core/: point.h
racecar_core/include/racecar_core/math_common/: linear_interpolator.h  math_utils.h  spline.h  table_interpolation.h
racecar_core/include/racecar_core/serial_port/: serial_common.h  serial_port.h  serial_port_threaded.h
racecar_core/include/racecar_core/utils/: color.h  cubic_bezier.hpp  cv.h  graph.hpp  kd_tree.h  laser.h  math.h  serialization.h  std.h  tf.h
racecar_core/launch/: chassis.launch  guardian.launch  hardware.launch  rviz.launch
racecar_core/rviz/: amcl.rviz  gmapping.rviz  hound.rviz  move_base.rviz  teb.rviz
racecar_core/src/guardian/: CMakeLists.txt  guardian.cpp
racecar_core/src/laser_calibration/: CMakeLists.txt  laser_calibration.cpp
racecar_core/src/math_common/: CMakeLists.txt  math_utils.cpp  table_interpolation.cpp
racecar_core/src/math_common/test/: table_interpolation_test.cpp
racecar_core/src/racecar_chassis/: CMakeLists.txt  racecar_chassis.cpp  racecar_chassis.h
racecar_core/src/serial_port/: CMakeLists.txt  serial_common.cpp  serial_port.cpp  serial_port_threaded.cpp
racecar_description/: CMakeLists.txt  package.xml
racecar_description/launch/: racecar.launch  racecar_rviz.launch
racecar_description/urdf/: racecar.urdf.xacro
racecar_drivers/art_imu/: CMakeLists.txt
racecar_gazebo/: CMakeLists.txt  package.xml
racecar_gazebo/config/: racecar_joint_ctrlr_params.yaml
racecar_gazebo/launch/: racecar_circle_task.launch  racecar_empty_world.launch  spawn_racecar.launch
racecar_gazebo/scripts/: ackermann_controller.py  racecar_teleop.py
racecar_gazebo/worlds/: circle_task.world  circle_task_cylinder.world
racecar_msgs/: CMakeLists.txt  package.xml
racecar_msgs/msg/: ChassisCommand.msg  Checkline.msg  MPCState.msg  Obstacle.msg  ObstacleEvent.msg  Stage.msg
racecar_msgs/srv/: GetCheckline.srv  GetPathSimilarity.srv  QueryStage.srv
racecar_navigation/: CMakeLists.txt  package.xml
racecar_navigation/config/: car.mprim  car_.mprim.txt  costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  ekf_params.yaml  graph_detector.yaml  graph_localization.yaml  graph_path.txt  graph_path_reverse.txt  graph_planner.yaml  hound_line.yaml  laser_line.yaml  matching_detector.yaml  obstacle_detector.yaml  pf-localization.ini  planner.yaml  scan_planner.yaml  teb_planner.yaml
racecar_navigation/include/: costmap_wrapper.h
racecar_navigation/include/laser_line/: fstruct.h  laser_feature_ros.h  line_feature.h
racecar_navigation/include/obstacle_detector/: matching_detector.h  obstacle_detector.h
racecar_navigation/include/path_planner/: astar.h  base_path_planner.h  dijkstra.h  expander.h  gradient_path.h  grid_path.h  orientation_filter.h  planner_core.h  potential_calculator.h  quadratic_calculator.h  traceback.h
racecar_navigation/include/sbpl_planner/: sbpl_planner.h
racecar_navigation/launch/: amcl.launch  amcl_demo.launch  gmapping.launch  gmapping_demo.launch  graph_detector.launch  graph_localization.launch  graph_planner.launch  hound.launch  laser_odom.launch  map_localization.launch  map_server.launch  matching_detector.launch  move_base.launch  move_base_demo.launch  mrpt.launch  navigator.launch  obstacle_detector.launch  odom.launch  racecar_move_base.launch  scan_planner.launch  teb.launch  vins_odom.launch
racecar_navigation/maps/: mymap.yaml  north_graph.yaml  pure_map.py  south_graph.yaml  test.pgm.bak
racecar_navigation/scripts/path_compare/: package-lock.json  package.json  path_compare.js
racecar_navigation/src/graph_detector/: CMakeLists.txt  graph_detector.cpp  graph_detector.h
racecar_navigation/src/graph_localization/: CMakeLists.txt  graph_localization.cpp  graph_localization.h  line_merger.hpp  map_graph.hpp
racecar_navigation/src/graph_planner/: CMakeLists.txt  graph_planner.cpp  graph_planner.h
racecar_navigation/src/hound_dog/: CMakeLists.txt  hound_dog.cpp
racecar_navigation/src/laser_line/: CMakeLists.txt  laser_feature_ros.cpp  line_feature.cpp
racecar_navigation/src/lsm_odom/: CMakeLists.txt  main.cpp
racecar_navigation/src/map_localization/: CMakeLists.txt  map_localization_node.cpp
racecar_navigation/src/navigator/: CMakeLists.txt  navigator_node.cpp
racecar_navigation/src/obstacle_detector/: CMakeLists.txt  matching_detector.cpp  obstacle_detector.cpp
racecar_navigation/src/path_planner/: CMakeLists.txt  astar.cpp  dijkstra.cpp  gradient_path.cpp  grid_path.cpp  orientation_filter.cpp  plan_node.cpp  planner_core.cpp  quadratic_calculator.cpp
racecar_navigation/src/sbpl_planner/: CMakeLists.txt  sbpl_planner.cpp
racecar_navigation/src/scan_planner/: CMakeLists.txt  scan_planner.cpp
racecar_stage/: CMakeLists.txt  package.xml
racecar_stage/launch/: hound.launch  stage.launch
racecar_stage/maps/: maze1.yaml  race.gridmap  race.yaml  test.yaml
racecar_stage/scripts/: fake_imu.py
racecar_stage/stage/: maze_carlike.world  (+2 more)
racecar_teleop/: CMakeLists.txt  package.xml
racecar_teleop/launch/: racecar_joyop.launch
racecar_teleop/scripts/: joyop.py  keyop.py
racecar_util/: CMakeLists.txt  connect.sh  install_ceres.sh  install_mynt.sh  install_tinyspline.sh  odom_distance.py  package.xml  path_change.py  save_map.sh  speed.py  steer_test.py
(+35 files in other folders)
