<?xml version="1.0"?>
<package format="2">
  <name>racecar_core</name>
  <version>0.0.0</version>
  <description>The racecar_core package</description>
  <maintainer email="i@yenkn.com">yenkn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>racecar_msgs</depend>
  <depend>rospy</depend>
  <depend>tf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
